# psammite-vm

./: .gitignore  CMakeLists.txt  DEVLOG.md  LICENSE  README.md  psammite.c  run.sh
.github/workflows/: big-endian-test.yml  cmake-multi-platform.yml  main.yml
include/: asm_macros.h  branch.h  core.h  decoders.h  endian.h  immediate.h  jump.h  load_store.h  opcodes.h  psammite.h  psammite_asm_macros.h  psammite_branch_instructions.h  psammite_core.h  psammite_decoders.h  psammite_execute_instructions.h  psammite_immediate_instructions.h  psammite_jump_instructions.h  psammite_load_store_instructions.h  psammite_opcodes.h  registers.h  status_codes.h
include/execute/: execute_router.h  imath.h  system.h
sandbox/: psammite_sandbox_template.c
src/: main.c  psammite.c
tests/: test.c
